Modernize CTI server shutdown handling