@@ -12,13 +12,15 @@ import java.net.ServerSocket;
 import java.net.Socket;
 import java.net.SocketException;
 import java.security.KeyStore;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.List;
 import java.util.Properties;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Semaphore;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicLong;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -39,111 +41,16 @@ public class CTIServer {
 
 	private static final Logger ACCESS = Logger.getLogger("jp.cssj.copper.access");
 
+	private static final long FORCED_SHUTDOWN_TIMEOUT_SECONDS = 5;
+
 	private ProtocolHandler[] handlers = null;
-
-	/**
-	 * 一時に1つの処理を行うためのワーカースレッドです。
-	 * 
-	 * @author MIYABE Tatsuhiko
-	 * @version $Id: CTIServer.java 1552 2018-04-26 01:43:24Z miyabe $
-	 */
-	private class WorkerThread extends Thread {
-		private Socket socket;
-		private final ProtocolProcessor[] processors = new ProtocolProcessor[CTIServer.this.handlers.length];
-
-		WorkerThread() {
-			super("CopperServer worker");
-		}
-
-		public synchronized void wakeup(Socket socket) {
-			this.socket = socket;
-			this.notify();
-		}
-
-		private void closeSocket() {
-			try {
-				this.socket.close();
-			} catch (Exception e) {
-				// ignore
-			}
-			this.socket = null;
-		}
-
-		public synchronized void run() {
-			try {
-				while (CTIServer.this.running) {
-					try {
-						CTIServer.this.freeThread(this);
-						this.wait();
-						if (!CTIServer.this.running) {
-							break;
-						}
-					} catch (InterruptedException ex) {
-						// ignore
-					}
-					final InetAddress remoteAddress = this.socket.getInetAddress();
-					final String remoteHost = remoteAddress.getHostAddress();
-					try {
-						// アクセス制御
-						try {
-							Acl acl = Acl.find(remoteHost);
-							if (acl == null || !acl.checkAccess(remoteAddress)) {
-								ACCESS.info(remoteHost + "からのアクセスを拒否しました");
-								continue;
-							}
-
-							CTIServer.this.accessCount++;
-							final InputStream in = this.socket.getInputStream();
-							final OutputStream out = this.socket.getOutputStream();
-
-							StringBuffer buff = new StringBuffer();
-							for (int b = in.read(); b != -1 && b != '\n'; b = in.read()) {
-								buff.append((char) b);
-							}
-							String firstLine = buff.toString();
-
-							ProtocolProcessor processor = null;
-							for (int i = 0; i < CTIServer.this.handlers.length; ++i) {
-								if (CTIServer.this.handlers[i].accepts(firstLine)) {
-									if (this.processors[i] == null) {
-										this.processors[i] = CTIServer.this.handlers[i].newProcesor();
-									}
-									processor = this.processors[i];
-									break;
-								}
-							}
-							if (processor == null) {
-								throw new IOException("Unknown protocol:" + firstLine);
-							}
-							ACCESS.fine("Connected: " + remoteHost);
-							try {
-								processor.process(this.socket, in, out, firstLine);
-							} finally {
-								// System.err.println("dispose: "+this.socket);
-								processor.close();
-							}
-						} finally {
-							// System.err.println("closeSocket: "+this.socket);
-							this.closeSocket();
-						}
-					} catch (Throwable e) {
-						ACCESS.info(remoteHost + "から要求された処理を実行中にエラーが発生しました");
-						LOG.log(Level.WARNING, "処理を実行中にエラーが発生しました", e);
-					}
-				}
-			} catch (Throwable e) {
-				String m = "予期しないエラーです。実行環境に問題がある可能性があります";
-				LOG.log(Level.SEVERE, m, e);
-				CTIServer.this.threads.remove(this);
-				CTIServer.this.supplementThreads();
-			}
-		}
-	}
 
 	/**
 	 * 待ち受けポート、キューのサイズ、タイムアウト、最小ワーカー数、最大ワーカー数。
 	 */
 	private int port = -1, tlsPort = -1, backlog = 30, timeout = 180000, minThreads = 10, maxThreads = 50;
+
+	private long shutdownTimeout = -1L;
 
 	private File keyStore;
 
@@ -153,24 +60,31 @@ public class CTIServer {
 
 	private ServerSocket tlsServerSocket;
 
-	private final List<WorkerThread> free = new ArrayList<WorkerThread>();
+	private Semaphore permits;
 
-	private final Set<WorkerThread> threads = Collections.synchronizedSet(new HashSet<WorkerThread>());
+	private ExecutorService executor;
+
+	private final Set<Socket> activeSockets = ConcurrentHashMap.newKeySet();
+
+	private final AtomicInteger activeConnections = new AtomicInteger();
 
 	private volatile boolean running = true;
 
-	private volatile long accessCount;
+	private volatile boolean forceClosing = false;
+
+	private final AtomicLong accessCount = new AtomicLong();
 
 	public CTIServer() {
 		// nothing to do
 	}
 
 	public int getTotalThreads() {
-		return this.threads.size();
+		return this.maxThreads;
 	}
 
 	public int getFreeThreads() {
-		return this.free.size();
+		Semaphore permits = this.permits;
+		return permits == null ? this.maxThreads : permits.availablePermits();
 	}
 
 	public int getMaxThreads() {
@@ -178,7 +92,7 @@ public class CTIServer {
 	}
 
 	public long getAccessCount() {
-		return this.accessCount;
+		return this.accessCount.get();
 	}
 
 	public void setProtocolHandlers(ProtocolHandler[] handlers) {
@@ -198,10 +112,15 @@ public class CTIServer {
 		this.backlog = Integer.parseInt(props.getProperty("jp.cssj.cssjd.backlog", String.valueOf(this.backlog)));
 		this.timeout = Integer.parseInt(props.getProperty("jp.cssj.cssjd.timeout", String.valueOf(this.timeout / 1000)))
 				* 1000;
+		long shutdownTimeoutSeconds = Long.parseLong(
+				props.getProperty("jp.cssj.cssjd.shutdownTimeout", String.valueOf(this.timeout / 1000)));
+		this.shutdownTimeout = shutdownTimeoutSeconds < 0 ? -1L : shutdownTimeoutSeconds * 1000L;
 		this.maxThreads = Integer
 				.parseInt(props.getProperty("jp.cssj.cssjd.maxThreads", String.valueOf(this.maxThreads)));
 		this.minThreads = Integer
 				.parseInt(props.getProperty("jp.cssj.cssjd.minThreads", String.valueOf(this.minThreads)));
+		this.maxThreads = Math.max(1, this.maxThreads);
+		this.minThreads = Math.max(0, this.minThreads);
 
 		this.tlsPort = Integer.parseInt(props.getProperty("jp.cssj.cssjd.tls.port", String.valueOf(this.tlsPort)));
 		if (this.tlsPort != -1) {
@@ -214,31 +133,11 @@ public class CTIServer {
 
 	private void accept(ServerSocket serverSocket) {
 		try {
-			OUTER: while (this.running) {
+			while (this.running) {
 				Socket socket = serverSocket.accept();
 				socket.setSoTimeout(this.timeout);
-				// 受付
-				synchronized (this) {
-					while (this.free.isEmpty() && !socket.isClosed()) {
-						if (this.threads.size() < this.maxThreads) {
-							this.startThread();
-						}
-						try {
-							this.wait();
-						} catch (InterruptedException e) {
-							// ignore
-						}
-						if (!this.running) {
-							break OUTER;
-						}
-					}
-				}
-				if (!socket.isClosed()) {
-					WorkerThread worker;
-					synchronized (this) {
-						worker = (WorkerThread) this.free.remove(this.free.size() - 1);
-					}
-					worker.wakeup(socket);
+				if (this.acquirePermit(socket)) {
+					this.startConnection(socket);
 				}
 			}
 		} catch (SocketException e) {
@@ -248,32 +147,111 @@ public class CTIServer {
 		}
 	}
 
-	private synchronized void supplementThreads() {
-		if (!this.running) {
-			return;
+	private boolean acquirePermit(Socket socket) {
+		try {
+			while (this.running) {
+				if (this.permits.tryAcquire(500, TimeUnit.MILLISECONDS)) {
+					return true;
+				}
+			}
+		} catch (InterruptedException e) {
+			Thread.currentThread().interrupt();
 		}
-		while (this.threads.size() < this.minThreads) {
-			this.startThread();
+		this.closeSocket(socket);
+		return false;
+	}
+
+	private void startConnection(Socket socket) {
+		try {
+			this.activeSockets.add(socket);
+			this.executor.execute(() -> this.process(socket));
+		} catch (Throwable e) {
+			this.activeSockets.remove(socket);
+			this.permits.release();
+			this.closeSocket(socket);
+			if (this.running) {
+				LOG.log(Level.WARNING, "接続処理を開始できません", e);
+			}
+			if (e instanceof Error error) {
+				throw error;
+			}
 		}
 	}
 
-	private synchronized void startThread() {
-		if (!this.running) {
-			return;
+	private void process(Socket socket) {
+		this.activeConnections.incrementAndGet();
+		try {
+			this.handle(socket);
+		} finally {
+			this.activeSockets.remove(socket);
+			this.activeConnections.decrementAndGet();
+			this.permits.release();
+			this.closeSocket(socket);
 		}
-		WorkerThread worker = new WorkerThread();
-		worker.setDaemon(true);
-		this.threads.add(worker);
-		worker.start();
 	}
 
-	private synchronized void freeThread(WorkerThread worker) {
-		if (!this.running) {
-			return;
+	private void handle(Socket socket) {
+		final InetAddress remoteAddress = socket.getInetAddress();
+		final String remoteHost = remoteAddress.getHostAddress();
+		try {
+			Acl acl = Acl.find(remoteHost);
+			if (acl == null || !acl.checkAccess(remoteAddress)) {
+				ACCESS.info(remoteHost + "からのアクセスを拒否しました");
+				return;
+			}
+
+			this.accessCount.incrementAndGet();
+			final InputStream in = socket.getInputStream();
+			final OutputStream out = socket.getOutputStream();
+
+			StringBuilder buff = new StringBuilder();
+			for (int b = in.read(); b != -1 && b != '\n'; b = in.read()) {
+				buff.append((char) b);
+			}
+			String firstLine = buff.toString();
+
+			ProtocolProcessor processor = null;
+			for (ProtocolHandler handler : this.handlers) {
+				if (handler.accepts(firstLine)) {
+					processor = handler.newProcesor();
+					break;
+				}
+			}
+			if (processor == null) {
+				throw new IOException("Unknown protocol:" + firstLine);
+			}
+			ACCESS.fine("Connected: " + remoteHost);
+			try {
+				processor.process(socket, in, out, firstLine);
+			} finally {
+				processor.close();
+			}
+		} catch (Throwable e) {
+			if (this.forceClosing) {
+				LOG.log(Level.FINE, "停止処理により接続処理を終了しました", e);
+			} else {
+				ACCESS.info(remoteHost + "から要求された処理を実行中にエラーが発生しました");
+				LOG.log(Level.WARNING, "処理を実行中にエラーが発生しました", e);
+			}
 		}
-		this.free.add(worker);
-		this.notify();
-		LOG.fine("ワーカーを登録しました(総数:" + this.threads.size() + "/利用可能:" + this.free.size() + ")");
+	}
+
+	private void closeSocket(Socket socket) {
+		try {
+			socket.close();
+		} catch (Exception e) {
+			// ignore
+		}
+	}
+
+	private boolean awaitShutdown(ExecutorService executor) throws InterruptedException {
+		if (this.shutdownTimeout < 0) {
+			while (!executor.awaitTermination(1, TimeUnit.DAYS)) {
+				// wait indefinitely, preserving the legacy graceful shutdown default when requested
+			}
+			return true;
+		}
+		return executor.awaitTermination(this.shutdownTimeout, TimeUnit.MILLISECONDS);
 	}
 
 	/**
@@ -282,7 +260,9 @@ public class CTIServer {
 	 * @throws IOException
 	 */
 	public synchronized void startup() throws BindException, IOException {
-		this.supplementThreads();
+		this.permits = new Semaphore(this.maxThreads);
+		this.executor = Executors.newCachedThreadPool(
+				Thread.ofPlatform().daemon().name("CopperServer worker-", 0).factory());
 
 		// サーバー開始
 		if (this.port != -1) {
@@ -306,24 +286,16 @@ public class CTIServer {
 		}
 
 		if (this.serverSocket != null) {
-			Thread th = new Thread(CTIServer.class.getName()) {
-				public void run() {
-					LOG.info("サーバーを" + port + "番ポートで起動します");
-					CTIServer.this.accept(CTIServer.this.serverSocket);
-				}
-			};
-			th.setDaemon(true);
-			th.start();
+			Thread.ofPlatform().daemon().name(CTIServer.class.getName() + "-plain").start(() -> {
+				LOG.info("サーバーを" + port + "番ポートで起動します");
+				CTIServer.this.accept(CTIServer.this.serverSocket);
+			});
 		}
 		if (this.tlsServerSocket != null) {
-			Thread th = new Thread(CTIServer.class.getName()) {
-				public void run() {
-					LOG.info("TLS サーバーを" + tlsPort + "番ポートで起動します");
-					CTIServer.this.accept(CTIServer.this.tlsServerSocket);
-				}
-			};
-			th.setDaemon(true);
-			th.start();
+			Thread.ofPlatform().daemon().name(CTIServer.class.getName() + "-tls").start(() -> {
+				LOG.info("TLS サーバーを" + tlsPort + "番ポートで起動します");
+				CTIServer.this.accept(CTIServer.this.tlsServerSocket);
+			});
 		}
 	}
 
@@ -335,6 +307,8 @@ public class CTIServer {
 		if (!this.running) {
 			return;
 		}
+		this.running = false;
+		this.forceClosing = false;
 		if (this.serverSocket != null) {
 			try {
 				this.serverSocket.close();
@@ -349,20 +323,30 @@ public class CTIServer {
 				LOG.log(Level.WARNING, "SSL 待ち受けソケットをクローズできませんでした", e);
 			}
 		}
-		this.running = false;
 		LOG.info("サーバーを停止しています...");
-		for (Iterator<WorkerThread> i = this.threads.iterator(); i.hasNext();) {
-			WorkerThread worker = (WorkerThread) i.next();
-			synchronized (worker) {
-				worker.notify();
-			}
+		ExecutorService executor = this.executor;
+		if (executor != null) {
+			executor.shutdown();
 			try {
-				worker.join();
+				if (!this.awaitShutdown(executor)) {
+					LOG.warning("接続処理の終了待ちがタイムアウトしました(実行中:" + this.activeConnections.get() + ")");
+					this.forceClosing = true;
+					for (Socket socket : this.activeSockets) {
+						this.closeSocket(socket);
+					}
+					executor.shutdownNow();
+					if (!executor.awaitTermination(FORCED_SHUTDOWN_TIMEOUT_SECONDS, TimeUnit.SECONDS)) {
+						LOG.warning("強制停止後も接続処理が終了しません(実行中:" + this.activeConnections.get() + ")");
+					}
+				}
 			} catch (InterruptedException e) {
-				// ignore
+				this.forceClosing = true;
+				for (Socket socket : this.activeSockets) {
+					this.closeSocket(socket);
+				}
+				executor.shutdownNow();
+				Thread.currentThread().interrupt();
 			}
-			i.remove();
-			LOG.fine("ワーカーの数:" + this.threads.size());
 		}
 		LOG.info("サーバーを停止しました");
 	}
